--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,4 @@
-:root {
-    --primary-color: #357b70;
-    --primary-color-darken: var(--primary-color, 50%);
-    --secondary-color: #546130;
-    --dark-grey: #2b2b2b;
-    --button-text: #fff;
-  }
-  
+
   body {
     font-family: 'Rajdhani', sans-serif;
     src: url("https://fonts.googleapis.com/css2?family=Rajdhani&display=swap");
@@ -32,7 +25,7 @@
   }
   
   a:active {
-    /* selected link */
+    
     color: var(--secondary-color);
   }
   
@@ -42,9 +35,23 @@
     font-style: italic;
   }
   
+/* list and button styles */
+
   ul {
     list-style-type: none;
   }
+
+
+
+.pokemon-list ul {
+    text-align: left;
+    list-style-type: none;
+    padding: 5px;
+    width: auto;
+}
+
+/* header stuff */
+
 .page-header {
     display: -webkit-box;
     display: -ms-flexbox;
