added polyfill/fetch for api, updated repo
added the js for polyfill/fetch
updated repo to pull data from pokemon api

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,12 @@
     font-style: italic;
   }
   
+  .profile {
+    max-width: 900px;
+    margin: 0 auto;
+    text-align: center;
+  }
+
 /* list and button styles */
 
   ul {
