--- a/css/styles.css
+++ b/css/styles.css
@@ -143,10 +143,86 @@ button {
 
   /* this is code for modal stuff */
 
+
+  h3 {
+    font-size: 18px;
+    font-weight: 700;
+  }
+  
+  .list-button {
+      background-color: #fff;
+      width: 100%;
+      height: 50px;
+      border-radius: 5px;
+      color: #3366cc;
+      border: #000 solid 1px;
+      cursor: pointer;
+  }
+  
+  .pokemon-list li {
+      text-align: center;
+      list-style-type: none;
+      padding: 5px;
+      width: 33.333%;
+  }
+  
+
+  /* modal container */
   #modal-container {
     display: none;
   }
-
+  
   #modal-container.is-visible {
-    display: block;
+    position: fixed;
+    padding: 20px;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    overflow: auto;
+    display: grid;
+    text-align: center;
+  }
+  
+  .modal {
+    margin: auto;
+    display: inline-block;
+    box-sizing: border-box;
+    background: #fff;
+    padding: 15px;
+    width: 100%;
+    max-width: 700px;
+    text-align: left;
+  }
+  
+  .modal-close {
+    float: right;
+    -webkit-appearance: none;
+    border: 0;
+    background: none;
+    color: #777;
+    text-decoration: underline;
+  }
+  
+  .modal h1 {
+    margin-top: 0;
+  }
+  .modal p {
+    margin-bottom: 0;
+  }
+
+  
+  @media all and (max-width: 1024px) {
+    .pokemon-list li {
+      width: 100%;
+    }
+  }
+  
+  @media all and (max-width: 630px) {
+    .pokemon-list li {
+      width: 100%;
+    }
   }
