--- a/css/styles.css
+++ b/css/styles.css
@@ -55,13 +55,13 @@ button {
   width: 100px;
   height: 50px;
   font-family: inherit;
-  background-color: #357b70;
-  color: white;
+  background-color: rgb(71, 70, 70);
+  color: rgb(231, 228, 228);
   text-decoration: none;
   text-align: center;
   margin: 5px;
   border-radius: 3px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  border-bottom: #fff;
 }
 
 /* header stuff */
@@ -148,24 +148,9 @@ button {
     font-size: 18px;
     font-weight: 700;
   }
+
   
-  .list-button {
-      background-color: #fff;
-      width: 100%;
-      height: 50px;
-      border-radius: 5px;
-      color: #3366cc;
-      border: #000 solid 1px;
-      cursor: pointer;
-  }
-  
-  .pokemon-list li {
-      text-align: center;
-      list-style-type: none;
-      padding: 5px;
-      width: 33.333%;
-  }
-  
+ 
 
   /* modal container */
   #modal-container {
